<resources>
    <string name="app_name">Luga Luga</string>
    <string name="hint_email">email</string>
    <string name="hint_password">senha</string>
    <string name="esqueci">Esqueci senha</string>
    <string name="japossui">Já tenho uma conta</string>
    <string name="login">LOGIN</string>

    <string name="input_nascimento">Data de Nascimento</string>


    <string name="g_produto">Nome Produto</string>
    <string name="g_preco">R$ 00,00</string>
    <string name="g_descricao">O trecho padrão original de Lorem Ipsum, usado desde o século XVI, está reproduzido abaixo para os interessados.</string>

    <string name="g_qtdProduto">10pc</string>
    <string name="btn_alugar">Alugar</string>
    <string name="input_nome_user">Nome</string>
    <string name="input_cpf_user">CPF</string>
    <string name="input_cep">CEP</string>
    <string name="input_cidade">Cidade</string>
    <string name="input_logradouro">Logradouro</string>
    <string name="input_numero">Nº</string>
    <string name="input_complemento">Complemento</string>
    <string name="input_bairro">Bairro</string>
    <string name="input_email">Email</string>
    <string name="input_senha">Senha</string>
    <string name="btn_cadastrar">CADASTRO</string>

    <string-array name="uf_cadastro">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Luga Luga</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_bemvindo">Bem-vindo ao Luga-Luga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Produtos">Produtos</string>
    <string name="Solicitacoes">Solicitações</string>
    <string name="Acompanhamento">Acompanhamento</string>
    <string name="Atendimento">Atendimento</string>
    <string name="MaisInformações">Mais Informações</string>
    <string name="Sobrenós">Sobre nós</string>
    <string name="FaleConosco">Fale Conosco</string>
    <string name="assunto">Assunto</string>
    <string name="msg">Mensagem</string>
</resources>