<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_menu_produtos"
            android:title="@string/Produtos"/>

        <item
            android:id="@+id/nav_solicitacao"
            android:icon="@drawable/ic_menu_solicitacoes"
            android:title="@string/Solicitacoes"/>

        <item
            android:id="@+id/nav_acompanhamento"
            android:icon="@drawable/ic_menu_time"
            android:title="@string/Acompanhamento"/>

        <item
            android:id="@+id/nav_atendimento"
            android:icon="@drawable/ic_menu_atendimento"
            android:title="@string/Atendimento"/>

    </group>

<item
    android:title="Mais Informações">

    <menu>
        <item
            android:id="@+id/nav_sobrenos"
            android:icon="@drawable/ic_menu_sobre"
            android:title="@string/Sobrenós"/>

        <item
            android:id="@+id/nav_fale"
            android:icon="@drawable/ic_menu_fale"
            android:title="@string/FaleConosco"/>
    </menu>
</item>



</menu>