<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/g_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_produto" />

    <TextView
        android:id="@+id/g_nomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/g_produto"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/g_"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/g_precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g_preco"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/g_"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/g_descProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/g_descricao"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/g_nomeProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>