<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    tools:context=".view.ProdutoActivity">

    <TextView
        android:id="@+id/g_nomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome Produto"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/gqtdProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10pc"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/produtoImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_produto"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/gqtdProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g_preco"
        android:textSize="20sp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/produtoImg"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/alugaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_alugar"
        android:textSize="22sp"
        android:textAllCaps="true"
        android:backgroundTint="@color/blue_dark"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@id/produtoImg"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/g_descProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_descricao"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/alugaBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>